멤버 재정리. 결재선 관련 정리