@@ -1,20 +1,17 @@
 package com.orbit.service.procurement;
 
-import com.orbit.dto.procurement.ProjectRequestDTO;
-import com.orbit.dto.procurement.ProjectResponseDTO;
+import com.orbit.dto.procurement.*;
 import com.orbit.entity.member.Member;
 import com.orbit.entity.project.Project;
-import com.orbit.entity.commonCode.ParentCode;
-import com.orbit.entity.commonCode.ChildCode;
+import com.orbit.entity.state.StatusHistory;
+import com.orbit.entity.state.SystemStatus;
 import com.orbit.exception.ProjectNotFoundException;
 import com.orbit.repository.commonCode.ChildCodeRepository;
 import com.orbit.repository.commonCode.ParentCodeRepository;
 import com.orbit.repository.procurement.ProjectRepository;
+
+import com.orbit.service.StateService;
 import lombok.RequiredArgsConstructor;
-import lombok.extern.slf4j.Slf4j;
-import org.springframework.beans.factory.annotation.Value;
-import org.springframework.core.io.FileSystemResource;
-import org.springframework.core.io.Resource;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import org.springframework.util.StringUtils;
@@ -28,220 +25,131 @@ import java.nio.file.StandardCopyOption;
 import java.time.LocalDateTime;
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
-
-@Slf4j
 @Service
 @RequiredArgsConstructor
 public class ProjectService {
 
     private final ProjectRepository projectRepository;
-    private final ParentCodeRepository parentCodeRepository;
-    private final ChildCodeRepository childCodeRepository;
-    /**
-     * 모든 프로젝트 조회
-     */
+    private final StateService stateService;
+
     @Transactional(readOnly = true)
     public List<ProjectDTO> getAllProjects() {
         return projectRepository.findAll().stream()
                 .map(this::convertToDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
-    /**
-     * 단일 프로젝트 조회
-     */
     @Transactional(readOnly = true)
     public ProjectDTO getProjectById(Long id) {
         return projectRepository.findById(id)
                 .map(this::convertToDto)
-                .orElseThrow(() -> new ProjectNotFoundException("ID " + id + "에 해당하는 프로젝트를 찾을 수 없습니다."));
+                .orElseThrow(() -> new ProjectNotFoundException("Project not found: " + id));
     }
 
-    /**
-     * 프로젝트 생성
-     */
     @Transactional
     public ProjectResponseDTO createProject(ProjectRequestDTO dto, Member creator) {
-        // DTO를 엔티티로 변환
         Project project = convertToEntity(dto);
+        project.setBasicStatus(parseStatus(dto.getBasicStatus()));
+        project.setProcurementStatus(parseStatus(dto.getProcurementStatus()));
 
-        // 기본 상태 설정
-        if (dto.getBasicStatus() != null) {
-            String[] basicStatusParts = dto.getBasicStatus().split("-");
-            ParentCode basicStatusParent = parentCodeRepository.findByEntityTypeAndCodeGroup(
-                    "PROJECT", "STATUS"
-            );
-            ChildCode basicStatusChild = childCodeRepository.findByParentCodeAndCodeValue(
-                    basicStatusParent, basicStatusParts[2]
-            );
-            project.setBasicStatusParent(basicStatusParent);
-            project.setBasicStatusChild(basicStatusChild);
-        }
-
-        // 조달 상태 설정
-        if (dto.getProcurementStatus() != null) {
-            String[] procurementStatusParts = dto.getProcurementStatus().split("-");
-            ParentCode procurementStatusParent = parentCodeRepository.findByEntityTypeAndCodeGroup(
-                    "PROJECT", "PROCUREMENT_STATUS"
-            );
-            ChildCode procurementStatusChild = childCodeRepository.findByParentCodeAndCodeValue(
-                    procurementStatusParent, procurementStatusParts[2]
-            );
-            project.setProcurementStatusParent(procurementStatusParent);
-            project.setProcurementStatusChild(procurementStatusChild);
-        }
-
-        // 프로젝트 저장
         Project savedProject = projectRepository.save(project);
+        logStatusChange(savedProject, creator);
         return convertToDto(savedProject);
     }
 
-    /**
-     * 프로젝트 업데이트
-     */
     @Transactional
-    public ProjectResponseDTO updateProject(Long id, ProjectRequestDTO dto) {
-        // 기존 프로젝트 조회
+    public ProjectResponseDTO updateProject(Long id, ProjectRequestDTO dto, Member updater) {
         Project project = projectRepository.findById(id)
-                .orElseThrow(() -> new ProjectNotFoundException("ID " + id + "에 해당하는 프로젝트를 찾을 수 없습니다."));
+                .orElseThrow(() -> new ProjectNotFoundException("Project not found: " + id));
 
-        // 기본 상태 업데이트
-        if (dto.getBasicStatus() != null) {
-            String[] basicStatusParts = dto.getBasicStatus().split("-");
-            ParentCode basicStatusParent = parentCodeRepository.findByEntityTypeAndCodeGroup(
-                    "PROJECT", "STATUS"
-            );
-            ChildCode basicStatusChild = childCodeRepository.findByParentCodeAndCodeValue(
-                    basicStatusParent, basicStatusParts[2]
-            );
-            project.setBasicStatusParent(basicStatusParent);
-            project.setBasicStatusChild(basicStatusChild);
-        }
+        updateFields(project, dto);
+        logStatusChange(project, updater);
+        return convertToDto(projectRepository.save(project));
+    }
 
-        // 조달 상태 업데이트
-        if (dto.getProcurementStatus() != null) {
-            String[] procurementStatusParts = dto.getProcurementStatus().split("-");
-            ParentCode procurementStatusParent = parentCodeRepository.findByEntityTypeAndCodeGroup(
-                    "PROJECT", "PROCUREMENT_STATUS"
-            );
-            ChildCode procurementStatusChild = childCodeRepository.findByParentCodeAndCodeValue(
-                    procurementStatusParent, procurementStatusParts[2]
-            );
-            project.setProcurementStatusParent(procurementStatusParent);
-            project.setProcurementStatusChild(procurementStatusChild);
-        }
+    @Transactional
+    public void deleteProject(Long id) {
+        projectRepository.deleteById(id);
+    }
 
-        // 기타 필드 업데이트
+    // Helper methods
+    private void updateFields(Project project, ProjectRequestDTO dto) {
         project.setProjectName(dto.getProjectName());
         project.setBusinessCategory(dto.getBusinessCategory());
         project.setTotalBudget(dto.getTotalBudget());
-        project.setRequestDepartment(dto.getRequestDepartment());
-        project.setBudgetCode(dto.getBudgetCode());
-        project.setRemarks(dto.getRemarks());
+        project.setClientCompany(dto.getClientCompany());
+        project.setContractType(dto.getContractType());
 
-        // 프로젝트 기간 업데이트
-        Project.ProjectPeriod projectPeriod = project.getProjectPeriod();
-        projectPeriod.setStartDate(dto.getProjectPeriod().getStartDate());
-        projectPeriod.setEndDate(dto.getProjectPeriod().getEndDate());
+        if (dto.getProjectManager() != null) {
+            project.getProjectManager().setName(dto.getProjectManager().getName());
+            project.getProjectManager().setContact(dto.getProjectManager().getContact());
+            project.getProjectManager().setEmail(dto.getProjectManager().getEmail());
+        }
 
-        // 프로젝트 저장
-        Project savedProject = projectRepository.save(project);
-        return convertToDto(savedProject);
+        if (dto.getProjectPeriod() != null) {
+            project.getProjectPeriod().setStartDate(dto.getProjectPeriod().getStartDate());
+            project.getProjectPeriod().setEndDate(dto.getProjectPeriod().getEndDate());
+        }
     }
 
-    /**
-     * 프로젝트 삭제
-     */
-    @Transactional
-    public void deleteProject(Long id) {
-        Project project = projectRepository.findById(id)
-                .orElseThrow(() -> new ProjectNotFoundException("Project not found: " + id));
-        projectRepository.delete(project);
+    private void logStatusChange(Project project, Member member) {
+        StatusHistory history = stateService.changeState(
+                project.getId(),
+                StatusHistory.EntityType.PROJECT,
+                project.getBasicStatus(),
+                project.getProcurementStatus(),
+                member
+        );
+        project.addStatusHistory(history);
     }
 
-    /**
-     * DTO를 엔티티로 변환
-     */
+    private SystemStatus parseStatus(String statusCode) {
+        String[] parts = statusCode.split("-");
+        return new SystemStatus(parts[0], parts[1]);
+    }
+
     private Project convertToEntity(ProjectRequestDTO dto) {
         return Project.builder()
                 .projectName(dto.getProjectName())
                 .businessCategory(dto.getBusinessCategory())
-                .totalBudget(dto.getTotalBudget())
-                .clientCompany(dto.getClientCompany())
-                .contractType(dto.getContractType())
+                .projectManager(new Project.ProjectManager(
+                        dto.getProjectManager().getName(),
+                        dto.getProjectManager().getContact(),
+                        dto.getProjectManager().getEmail()
+                ))
                 .projectPeriod(new Project.ProjectPeriod(
                         dto.getProjectPeriod().getStartDate(),
                         dto.getProjectPeriod().getEndDate()
                 ))
+                .totalBudget(dto.getTotalBudget())
+                .clientCompany(dto.getClientCompany())
+                .contractType(dto.getContractType())
                 .build();
-
-        // 부서 설정 (ID가 있는 경우)
-        if (dto.getRequestDepartmentId() != null) {
-            Department department = departmentRepository.findById(dto.getRequestDepartmentId())
-                    .orElse(null);
-            if (department != null) {
-                project.setDepartment(department);
-            }
-        }
-
-        // ProjectPeriod 설정
-        Project.ProjectPeriod period = new Project.ProjectPeriod();
-        period.setStartDate(dto.getProjectPeriod().getStartDate());
-        period.setEndDate(dto.getProjectPeriod().getEndDate());
-        project.setProjectPeriod(period);
-
-        return project;
     }
 
-    /**
-     * 엔티티를 DTO로 변환
-     */
     private ProjectResponseDTO convertToDto(Project project) {
         ProjectResponseDTO dto = new ProjectResponseDTO();
-
-        // 기본 정보 설정
         dto.setId(project.getId());
         dto.setProjectIdentifier(project.getProjectIdentifier());
         dto.setProjectName(project.getProjectName());
         dto.setBusinessCategory(project.getBusinessCategory());
+        dto.setBasicStatus(project.getBasicStatus().getFullCode());
+        dto.setProcurementStatus(project.getProcurementStatus().getFullCode());
         dto.setTotalBudget(project.getTotalBudget());
-        dto.setRequestDepartment(project.getRequestDepartment());
-        dto.setBudgetCode(project.getBudgetCode());
-        dto.setRemarks(project.getRemarks());
+        dto.setClientCompany(project.getClientCompany());
+        dto.setContractType(project.getContractType());
 
-        // 기본 상태 코드 설정
-        if (project.getBasicStatusParent() != null && project.getBasicStatusChild() != null) {
-            dto.setBasicStatus(
-                    project.getBasicStatusParent().getEntityType() + "-" +
-                            project.getBasicStatusParent().getCodeGroup() + "-" +
-                            project.getBasicStatusChild().getCodeValue()
-            );
-        }
 
-        // 조달 상태 코드 설정
-        if (project.getProcurementStatusParent() != null && project.getProcurementStatusChild() != null) {
-            dto.setProcurementStatus(
-                    project.getProcurementStatusParent().getEntityType() + "-" +
-                            project.getProcurementStatusParent().getCodeGroup() + "-" +
-                            project.getProcurementStatusChild().getCodeValue()
-            );
-        }
+        ProjectResponseDTO.ManagerInfo managerInfo = new ProjectResponseDTO.ManagerInfo();
+        managerInfo.setName(project.getProjectManager().getName());
+        managerInfo.setContact(project.getProjectManager().getContact());
+        managerInfo.setEmail(project.getProjectManager().getEmail());
+        dto.setProjectManager(managerInfo);
 
-        // 프로젝트 기간 설정
         ProjectResponseDTO.PeriodInfo periodInfo = new ProjectResponseDTO.PeriodInfo();
         periodInfo.setStartDate(project.getProjectPeriod().getStartDate());
         periodInfo.setEndDate(project.getProjectPeriod().getEndDate());
         dto.setProjectPeriod(periodInfo);
-
-        // 첨부파일 설정 - 항상 설정
-        List<ProjectAttachmentDTO> attachmentDTOs = new ArrayList<>();
-        if (project.getAttachments() != null) {
-            attachmentDTOs = project.getAttachments().stream()
-                    .map(this::convertAttachmentToDto)
-                    .collect(Collectors.toList());
-        }
-        dto.setAttachments(attachmentDTOs);
 
         return dto;
     }
